# django_restframework

./: pyproject.toml
tutorial/: db.sqlite3
tutorial/snippets/: models.py  serializers.py  urls.py  views.py
tutorial/snippets/migrations/: 0001_initial.py
tutorial/tutorial/: settings.py  urls.py
