[project]
name = "django-restframework"
version = "0.1.0"
description = ""
authors = [
    {name = "Subhan Zahoor",email = "subhanzahoor12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "pygments (>=2.19.2,<3.0.0)",
    "httpie (>=3.2.4,<4.0.0)",
    "django-extensions (>=4.1,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
