[project]
name = "django-restframework"
version = "0.1.0"
description = "Django Rest Framework Practice"
authors = [
    {name = "Subhan Zahoor",email = "subhanzahoor12@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "django-extensions>=4.1",
    "djangorestframework>=3.16.1",
    "pygments>=2.19.2",
]

[dependency-groups]
dev = [
    "httpie>=3.2.4",
]
